# m6-competition

./: README.md  pyproject.toml  requirements.txt
notebooks/: forecasting - simple_univariate_models.ipynb
